# This file is part of tcp-engine. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/tcp-engine/master/COPYRIGHT. No part of tcp-engine, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of tcp-engine. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/tcp-engine/master/COPYRIGHT.


[package]
name = "tcp-engine-ports"
description = "tcp-engine ports"
keywords = ["tcp", "ports"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/tcp-engine/blob/master/README.md"
homepage = "https://github.com/lemonrock/tcp-engine"
repository = "https://github.com/lemonrock/tcp-engine.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
version = "0.0.0"

[dependencies]
hyper-thread-random = "^0.4"
network-collections = "^0.1"
network-endian = "^0.1"
network-time = "^0.1"
tcp-engine-internet-protocol = { path = "../tcp-engine-internet-protocol", version = "0.0.0" }
